--- a/app/src/main/res/layout/fragment_category1.xml
+++ b/app/src/main/res/layout/fragment_category1.xml
@@ -105,9 +105,9 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="5dp"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-            tools:listitem="@layout/item_column"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/category1_what_is_this_cv"
-            app:layout_constraintStart_toStartOf="parent"/>
+            tools:listitem="@layout/item_column" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
