--- a/app/src/main/res/layout/fragment_maps.xml
+++ b/app/src/main/res/layout/fragment_maps.xml
@@ -167,4 +167,14 @@
         </androidx.cardview.widget.CardView>
 
     </LinearLayout>
+
+    <Button
+        android:id="@+id/mylocationButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/search"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="17dp"
+        android:layout_marginTop="3dp"
+        android:text="내 위치" />
 </RelativeLayout>
