--- a/app/src/main/res/layout/activity_column_detail.xml
+++ b/app/src/main/res/layout/activity_column_detail.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto">
@@ -8,8 +9,8 @@
         android:id="@+id/column_detail_cover_iv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/example"
-        android:scaleType="centerCrop"
+        android:src="@drawable/img1"
+        android:scaleType="fitStart"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"/>
 
@@ -38,6 +39,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_margin="20dp"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginTop="16dp"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent">
 
@@ -47,9 +50,10 @@
                         android:layout_height="wrap_content"
                         android:layout_marginStart="10dp"
                         android:layout_marginTop="10dp"
+                        android:fontFamily="@font/nixgon_medium"
                         android:text="칼럼 제목"
                         android:textColor="@color/black"
-                        android:textSize="28sp"
+                        android:textSize="60px"
                         android:textStyle="bold"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -58,19 +62,29 @@
                         android:id="@+id/column_detail_sub_title_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:fontFamily="@font/nixgon_medium"
                         android:text="칼럼 부제목"
                         android:textColor="@color/black"
-                        android:textSize="18sp"
+                        android:textSize="40px"
                         app:layout_constraintStart_toStartOf="@id/column_detail_title_tv"
                         app:layout_constraintTop_toBottomOf="@id/column_detail_title_tv" />
+
+                    <androidx.cardview.widget.CardView
+                        android:layout_width="30dp"
+                        android:layout_height="30dp"
+                        android:backgroundTint="#2DAF81"
+                        app:cardCornerRadius="15dp"
+                        tools:layout_editor_absoluteX="19dp"
+                        tools:layout_editor_absoluteY="60dp" />
 
                     <TextView
                         android:id="@+id/column_detail_author_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="저자나 출처"
-                        app:layout_constraintStart_toStartOf="@id/column_detail_title_tv"
-                        app:layout_constraintTop_toBottomOf="@id/column_detail_sub_title_tv" />
+                        android:text="이야기"
+                        tools:layout_editor_absoluteX="10dp"
+                        tools:layout_editor_absoluteY="71dp" />
+
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
