--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -33,8 +33,8 @@
         android:text="소녀지도와 함께할\n당신의 정보를 입력해주세요"
         android:textColor="#AAAAAA"
         android:textSize="30px"
-
         android:textStyle="bold"
+
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signup_title" />
@@ -275,12 +275,7 @@
         app:layout_constraintVertical_bias="0.615"
         tools:ignore="TouchTargetSizeCheck"
         android:textStyle="bold"
-
-        android:paddingLeft="100dp"
-        android:paddingRight="100dp"
-        android:paddingTop="15dp"
-        android:paddingBottom="15dp"
-
+        android:gravity="center"
         android:background="@drawable/round_greybtn" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
