--- a/app/src/main/res/layout/fragment_category1.xml
+++ b/app/src/main/res/layout/fragment_category1.xml
@@ -63,7 +63,7 @@
                 android:padding="10dp">
 
                 <LinearLayout
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content">
 
                     <androidx.cardview.widget.CardView
@@ -81,6 +81,18 @@
                         android:text="이작가"
                         android:textColor="@color/black"
                         android:textSize="14sp"/>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="right">
+                        <ImageView
+                            android:id="@+id/category1_scrap_iv"
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:src="@drawable/ic_launcher_foreground"/>
+                    </LinearLayout>
+
                 </LinearLayout>
 
                 <TextView
