--- a/app/src/main/res/layout/item_column.xml
+++ b/app/src/main/res/layout/item_column.xml
@@ -65,6 +65,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/item_column_image_cv"
                 android:layout_width="150dp"
                 android:layout_height="120dp"
                 android:backgroundTint="#aaaaaa"
@@ -80,7 +81,17 @@
                     android:scaleType="centerCrop"
                     android:src="@drawable/example" />
 
+                <ImageView
+                    android:id="@+id/item_column_scrap_iv"
+                    android:layout_width="30dp"
+                    android:layout_height="30dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginEnd="10dp"
+                    android:layout_gravity="right"
+                    android:src="@drawable/ic_launcher_foreground" />
+
             </androidx.cardview.widget.CardView>
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
