--- a/app/src/main/res/layout/activity_column_detail.xml
+++ b/app/src/main/res/layout/activity_column_detail.xml
@@ -32,7 +32,17 @@
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="match_parent"
+                android:elevation="10dp">
+
+                <Button
+                    android:id="@+id/column_detail_bookmark_btn"
+                    android:layout_width="60px"
+                    android:layout_height="80px"
+                    android:layout_margin="30dp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    android:background="@drawable/bookmark_before"/>
 
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:id="@+id/info_detail_profile_layout"
@@ -59,6 +69,27 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
+                        android:id="@+id/column_detail_time_tv"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginStart="8dp"
+                        android:layout_marginTop="16dp"
+                        android:paddingLeft="8dp"
+                        android:paddingRight="8dp"
+                        android:paddingTop="2dp"
+                        android:paddingBottom="2dp"
+
+                        android:background="@drawable/round_white"
+                        android:backgroundTint="@color/green2"
+                        android:fontFamily="@font/nixgon_medium"
+                        android:text="5min"
+                        android:textColor="#026C47"
+                        android:textSize="25px"
+                        android:textStyle="bold"
+                        app:layout_constraintStart_toEndOf="@+id/column_detail_title_tv"
+                        app:layout_constraintTop_toTopOf="parent" />
+
+                    <TextView
                         android:id="@+id/column_detail_sub_title_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -69,22 +100,31 @@
                         app:layout_constraintStart_toStartOf="@id/column_detail_title_tv"
                         app:layout_constraintTop_toBottomOf="@id/column_detail_title_tv" />
 
-                    <androidx.cardview.widget.CardView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:backgroundTint="#2DAF81"
-                        app:cardCornerRadius="15dp"
-                        tools:layout_editor_absoluteX="19dp"
-                        tools:layout_editor_absoluteY="60dp" />
 
-                    <TextView
-                        android:id="@+id/column_detail_author_tv"
+
+                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="이야기"
-                        tools:layout_editor_absoluteX="10dp"
-                        tools:layout_editor_absoluteY="71dp" />
+                        android:layout_marginTop="10dp"
+                        app:layout_constraintStart_toStartOf="@+id/column_detail_sub_title_tv"
+                        app:layout_constraintTop_toBottomOf="@+id/column_detail_sub_title_tv"
+                        >
 
+                        <androidx.cardview.widget.CardView
+                            android:layout_width="30dp"
+                            android:layout_height="30dp"
+                            android:backgroundTint="#2DAF81"
+                            app:cardCornerRadius="15dp" />
+
+                        <TextView
+                            android:id="@+id/column_detail_author_tv"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="5dp"
+                            android:layout_marginTop="5dp"
+                            android:text="이야기" />
+
+                    </LinearLayout>
 
                 </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -93,10 +133,27 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="30dp"
+                    android:layout_marginTop="28dp"
                     android:text="오늘의 일기\n노트북 하나 달랑 들고 출근했는데 너무 심심하다.
                 아이패드도 들고올걸
                 그리고 지금 어린이실에서 일하고 있는데 나 혼자 엄청 큰 노트북으로 안드로이드 개발하고 있으니까
+                너무 관종같다. 근데 너무 심심해서 집어넣을 수가 없다.오늘의 일기\n노트북 하나 달랑 들고 출근했는데 너무 심심하다.
+                아이패드도 들고올걸
+                그리고 지금 어린이실에서 일하고 있는데 나 혼자 엄청 큰 노트북으로 안드로이드 개발하고 있으니까
+                너무 관종같다. 근데 너무 심심해서 집어넣을 수가 없다.오늘의 일기\n노트북 하나 달랑 들고 출근했는데 너무 심심하다.
+                아이패드도 들고올걸
+                그리고 지금 어린이실에서 일하고 있는데 나 혼자 엄청 큰 노트북으로 안드로이드 개발하고 있으니까
+                너무 관종같다. 근데 너무 심심해서 집어넣을 수가 없다.오늘의 일기\n노트북 하나 달랑 들고 출근했는데 너무 심심하다.
+                아이패드도 들고올걸
+                그리고 지금 어린이실에서 일하고 있는데 나 혼자 엄청 큰 노트북으로 안드로이드 개발하고 있으니까
+                너무 관종같다. 근데 너무 심심해서 집어넣을 수가 없다.오늘의 일기\n노트북 하나 달랑 들고 출근했는데 너무 심심하다.
+                아이패드도 들고올걸
+                그리고 지금 어린이실에서 일하고 있는데 나 혼자 엄청 큰 노트북으로 안드로이드 개발하고 있으니까
+                너무 관종같다. 근데 너무 심심해서 집어넣을 수가 없다.오늘의 일기\n노트북 하나 달랑 들고 출근했는데 너무 심심하다.
+                아이패드도 들고올걸
+                그리고 지금 어린이실에서 일하고 있는데 나 혼자 엄청 큰 노트북으로 안드로이드 개발하고 있으니까
                 너무 관종같다. 근데 너무 심심해서 집어넣을 수가 없다. 왜 아직도 3시지 얼른 퇴근하고 싶다."
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@id/info_detail_profile_layout" />
             </androidx.constraintlayout.widget.ConstraintLayout>
