--- a/app/src/main/res/layout/item_pharmacy.xml
+++ b/app/src/main/res/layout/item_pharmacy.xml
@@ -20,17 +20,22 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="15dp">
+            android:layout_height="wrap_content">
+
 
             <TextView
                 android:id="@+id/item_pharmacy_name_tv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="28dp"
-                android:layout_marginEnd="4dp"
+                android:layout_marginTop="32dp"
+                android:layout_marginEnd="16dp"
                 android:text="약국명약국명"
+                android:textSize="35px"
+                android:textStyle="bold"
+
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.631"
+                app:layout_constraintStart_toEndOf="@+id/item_pharmacy_iv"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
@@ -40,10 +45,10 @@
                 android:text="(약국정보)"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.946"
+                app:layout_constraintHorizontal_bias="0.836"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintVertical_bias="0.516" />
+                app:layout_constraintVertical_bias="0.503" />
 
             <TextView
                 android:id="@+id/item_pharmacy_location_tv"
@@ -52,18 +57,36 @@
                 android:layout_marginTop="16dp"
                 android:layout_marginEnd="16dp"
                 android:text="서울시 중랑구"
-                android:textSize="8sp"
+                android:textColor="@color/green1"
+                android:textSize="20px"
+                android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@+id/imageView"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
                 android:id="@+id/item_pharmacy_iv"
-                android:layout_width="99dp"
-                android:layout_height="166dp"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="108dp"
+                android:scaleType="centerCrop"
                 app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/example"
-                tools:layout_editor_absoluteX="-15dp" />
+                app:layout_constraintVertical_bias="0.0"
+                app:srcCompat="@drawable/example" />
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="14dp"
+                android:layout_height="11dp"
+                android:layout_marginStart="12dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintStart_toEndOf="@+id/item_pharmacy_iv"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/icon_map_select" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
